	* FileSetOutput.cc, FileSetOutput.h: (FileSetOutput::parse_res) new
	  method.
	* GetJob.cc, GetJob.h: use Ref and new FileCopyPeerFDStream ctor.
	* SMTask.cc, SMTask.h: fixed Ref assignment; more info in PrintTasks.
	* commands.cc, complete.cc: use FileSetOutput::parse_res.
	* pgetJob.cc, pgetJob.h: use new FileCopyPeerFDStream ctor.

2007-04-13  Alexander V. Lukyanov <lav@yars.free.net>

	* Ref.h: (Ref) new template class.
	* SMTask.h: (SMTaskRef) new template class.
	* Job.h: (JobRef) new template class.
	* CatJob.cc, CatJob.h, CmdExec.cc, CmdExec.h, CopyJob.cc, CopyJob.h,
	  FileSetOutput.cc, FileSetOutput.h, FindJob.cc, FindJob.h, Job.cc,
	  Job.h, MirrorJob.cc, MirrorJob.h, OutputJob.cc, OutputJob.h,
	  TreatFileJob.cc, TreatFileJob.h, buffer.cc, buffer.h, commands.cc,
	  echoJob.cc, echoJob.h, mgetJob.cc, mgetJob.h, mvJob.cc, mvJob.h,
	  pgetJob.cc, pgetJob.h: use Ref.

2007-04-12  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc, HttpDir.h, LocalAccess.cc, LsCache.cc, LsCache.h: use xstring.
	* xstring.cc, xstring.h: make vstrlen do va_copy.

2007-04-11  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, parsecmd.cc: use Buffer for cmd_buf;
	  use xstring where needed; fix FIXME in WriteCmds and ReadCmds;
	* buffer.cc, buffer.h: make Get const; (Prepend) new method.
	* MirrorJob.cc, MirrorJob.h, PatternSet.cc, PatternSet.h,
	  PtyShell.cc, PtyShell.h, commands.cc, lftp_ssl.cc, lftp_ssl.h:
	  use xstring.
	* ArgV.h: (CombineCmd) new method.
	* CmdExec.cc, CmdExec.h, CopyJob.cc, CopyJob.h, DummyProto.cc,
	  DummyProto.h, FileCopy.cc, FileCopy.h, FileGlob.cc, FileGlob.h,
	  Filter.cc, Filter.h, FindJob.cc, FindJob.h, FindJobDu.cc,
	  FindJobDu.h, Fish.cc, FtpDirList.cc, FtpDirList.h, GetFileInfo.cc,
	  GetFileInfo.h, GetJob.cc, GetJob.h, LocalDir.cc, LocalDir.h,
	  PtyShell.cc, alias.cc, alias.h, bookmark.cc, bookmark.h, commands.cc,
	  complete.cc, ftpclass.cc, history.cc, history.h, lftp.cc,
	  mgetJob.cc, mgetJob.h: use xstring.